new background and fireworks for win

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "morgan": "^1.8.1",
     "omdb": "^0.8.0",
     "prop-types": "^15.5.10",
+    "random-words": "0.0.1",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-redux": "^5.0.6",
