--- a/package.json
+++ b/package.json
@@ -32,12 +32,12 @@
     "omdb": "^0.8.0",
     "prop-types": "^15.5.10",
     "random-words": "0.0.1",
-    "rapidapi-connect": "0.0.6",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "redis": "^2.8.0",
     "redux": "^3.7.2",
     "redux-promise-middleware": "^5.0.0",
     "redux-thunk": "^2.2.0",
