--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-preset-stage-3": "^6.24.1",
     "babel-register": "^6.4.3",
     "bluebird": "^3.5.0",
+    "body-parser": "^1.18.2",
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
     "file-loader": "^0.11.2",
@@ -28,6 +29,7 @@
     "less-plugin-autoprefix": "^1.5.1",
     "lodash": "^4.15.0",
     "lodash-webpack-plugin": "^0.10.2",
+    "mongoose": "^5.0.1",
     "morgan": "^1.8.1",
     "omdb": "^0.8.0",
     "prop-types": "^15.5.10",
