--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bluebird": "^3.5.0",
     "body-parser": "^1.18.2",
     "dotenv": "^4.0.0",
+    "electron": "^1.7.11",
     "express": "^4.15.3",
     "file-loader": "^0.11.2",
     "fs": "0.0.1-security",
